fix scrolling on mobile

--- a/styles/TagBar.module.css
+++ b/styles/TagBar.module.css
@@ -2,4 +2,8 @@
   display: flex;
   flex-direction: row;
   gap: 8px;
+
+  width: 100%;
+  overflow-x: scroll;
+
 }
